date field gaps fixed

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/environment-dialog.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/environment-dialog.scss
@@ -147,12 +147,24 @@
   
   &:not(:first-child) {
 
-
     @include breakpoint($breakpoint-pad) {
       margin-left: 20px;
     }  
   }
 }
+
+
+.env-dialog__form-element-container--datepicker {
+  flex-grow: 0;
+    
+  &:not(:first-child) {
+    @include breakpoint($breakpoint-pad) {
+      margin-left: 0;
+    }  
+  }
+}
+
+
 
 .env-dialog__label {   
   align-items: center;
